--- a/index.html
+++ b/index.html
@@ -5,24 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Студия</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- Site header -->
-    <header>
+    <header class="page-header">
       <!-- Navigation -->
       <nav>
-        <a id="webstudio" class="logo-link" lang="en" href="./index.html"
+        <a id="webstudio" class="logo-link" lang="en" href="./index.html" class="logo"
           ><span class="logo-accent">Web</span>Studio</a
         >
         <!-- Navigation to other pages -->
-        <ul>
+        <ul class="site-nav">
           <li><a href="#">Студия</a></li>
           <li><a href="#">Портфолио</a></li>
           <li><a href="#">Контакты</a></li>
         </ul>
       </nav>
       <!-- Contacts-->
-      <ul>
+      <ul class="contact-nav">
         <li><a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a></li>
         <li><a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a></li>
       </ul>
